# pf4shconf

./: .gitignore  Cargo.toml  README.md
config/: datenmodell.sql  m.sh  modell1.txt  xhanaarc.conf  xhanaarc.sh  xhanadatacenter.conf  xhanadatacenter.sh  xhanahost.conf  xhanahost.sh  xhanapara_general.conf  xhanapara_general.sh  xhanapara_host.conf  xhanapara_host.sh  xhanapara_sid.conf  xhanapara_sid.sh  xhanaparameter.conf  xhanaparameter.conf.bck  xhanaparameter.sh  xhanasid.sh  xhanasolution.conf  xhanasolution.sh  xhanaversion.conf  xhanaversion.sh
config/src/: schema.rs
migrations/2021-07-02-204612_setup/: down.sql  up.sql
src/: lib.rs  models.rs  schema.rs  xhana.yaml  xhanaquery.yaml
src/xhanalib/: mod.rs  xhanaquerylib.rs
