[package]
name = "pf4shconf"
version = "0.1.0"
authors = ["arne"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"]}
dotenv = "0.15.0"
# Achtung hier noch Beta. Probleme mit beta.4 gehabt, daher hier explizit auf beta.2 gesetzt
clap = { version = "=3.0.0-beta.2", features = ["yaml"]}
csv = "1.1"
serde = "1"
serde_derive = "1"